ocp/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: msa-containerapp-nodejs-webapp
  labels:
    app: msa-containerapp-nodejs-webapp
    app.kubernetes.io/component: msa-containerapp-nodejs-webapp
    app.kubernetes.io/instance: msa-containerapp-nodejs-webapp
    app.kubernetes.io/name: msa-containerapp-nodejs-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: msa-containerapp-nodejs-webapp
  template:
    metadata:
      labels:
        app: msa-containerapp-nodejs-webapp
        deploymentconfig: msa-containerapp-nodejs-webapp
    spec:
      containers:
        - name: msa-containerapp-nodejs-webapp
          image: >-
            image-registry.openshift-image-registry.svc:5000/cicd-demo/msa-containerapp-nodejs-webapp
          resources: {}
          imagePullPolicy: Always
